# kittentts-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
android/: .gitignore  README.md  build_rust_android.sh  kittentts_jni.c
android/KittenTTSApp/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/KittenTTSApp/app/: build.gradle.kts  proguard-rules.pro
android/KittenTTSApp/app/src/main/: AndroidManifest.xml
android/KittenTTSApp/app/src/main/jniLibs/: readme.txt
android/KittenTTSApp/app/src/main/kotlin/com/kittenml/kittentts/: KittenTtsLib.kt  MainActivity.kt  TTSEngine.kt
android/KittenTTSApp/app/src/main/kotlin/com/kittenml/kittentts/ui/: AudioPlayerBar.kt  MainScreen.kt
android/KittenTTSApp/app/src/main/res/drawable/: ic_download.xml  ic_launcher_foreground.xml  ic_pause.xml  ic_replay.xml
android/KittenTTSApp/app/src/main/res/mipmap-anydpi/: ic_launcher.xml
android/KittenTTSApp/app/src/main/res/values/: colors.xml  themes.xml
android/KittenTTSApp/gradle/: libs.versions.toml
benches/: audio_encoding_bench.rs
examples/: basic.rs  performance_test.rs
include/: kittentts.h
ios/: .gitignore  README.md  build_rust_ios.sh  ios_endian_compat.h
ios/KittenTTSApp/KittenTTSApp/: AudioPlayerBar.swift  ContentView.swift  Info.plist  KittenTTS-Bridging-Header.h  KittenTTSApp.swift  TTSEngine.swift
ios/KittenTTSApp/KittenTTSApp.xcodeproj/: project.pbxproj
ios/KittenTTSApp/KittenTTSApp/Assets.xcassets/AccentColor.colorset/: Contents.json
scripts/: build-espeak-static.ps1  build-espeak-static.sh  test-windows-cross.sh  test-windows-native.ps1
src/: download.rs  encoding.rs  ffi.rs  lib.rs  model.rs  npz.rs  phonemize.rs  preprocess.rs  streaming.rs  tokenize.rs
src/benchmarks/: audio_encoding_bench.rs
src/encoding/: base.rs  flac.rs  mod.rs  monitor.rs  mp3.rs  opus.rs  pcm.rs  performance.rs  resample.rs  wav.rs
tests/: encoding_tests.rs  integration_tests.rs  server_tests.rs
