[package]
name = "kittentts"
version = "0.3.0"
edition = "2021"
authors = ["Eugene Hauptmann"]
description = "Rust port of KittenTTS — lightweight ONNX-based text-to-speech"
repository = "https://github.com/eugenehp/kittentts-rs"
homepage = "https://github.com/eugenehp/kittentts-rs"
keywords = ["tts", "text-to-speech", "onnx", "speech-synthesis", "espeak"]
license = "Apache-2.0"

exclude = ["ios", "android"]

# ── Feature flags ────────────────────────────────────────────────────────────
#
# [default] — empty: the crate compiles and publishes to crates.io without any
#   native system library.  All IPA-input APIs are available.  Methods that
#   require text-to-phoneme conversion (generate / generate_chunk /
#   generate_to_file) are **absent** from the public API surface.
#
# espeak — links libespeak-ng statically (or dynamically on Linux) and enables
#   the full text-input API: generate(), generate_chunk(), generate_to_file().
#   Requires libespeak-ng to be installed or built from source.
#
#   Desktop quick-start:
#     macOS  :  brew install espeak-ng
#     Ubuntu :  sudo apt install libespeak-ng-dev
#     Alpine :  apk add espeak-ng-dev
#     Arch   :  sudo pacman -S espeak-ng
#
#   Mobile / static builds: the pure-Rust `espeak-ng` crate is used,
#   so no system library is needed.
[features]
default = []
espeak = ["dep:espeak-ng"]
mp3 = ["dep:mp3lame-encoder"]
opus = ["dep:audiopus", "dep:audiopus_sys", "dep:ogg"]
flac = ["dep:flacenc"]
server = ["espeak", "mp3", "opus", "flac", "dep:tokio", "dep:tokio-stream", "dep:axum", "dep:tower", "dep:tower-http", "dep:clap"]

[lib]
# rlib     — used by `cargo test`, `cargo build`, and downstream Rust crates.
# staticlib — produces libkittentts.a for the iOS / Android Xcode / Gradle build.
#             The build script (ios/build_rust_ios.sh) links this with ORT and
#             espeak-ng into a single KittenTTS.xcframework.
crate-type = ["staticlib", "rlib"]

[dependencies]
# ── Platform-independent ─────────────────────────────────────────────────────

# WAV file I/O
hound = "3"

# Regex for text preprocessing and tokenisation
# fancy-regex: drop-in compatible with regex, adds look-ahead/look-behind support
fancy-regex = "0.14"
# regex is still used in tokenize.rs (simple patterns, no look-around)
regex = "1"
once_cell = "1"

# JSON config parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Pure-Rust eSpeak NG (optional, behind `espeak` feature)
espeak-ng = { version = "0.1", optional = true, features = ["bundled-data"] }

# Audio encoding (optional, feature-gated)
mp3lame-encoder = { version = "0.2", optional = true }
audiopus = { version = "0.2", optional = true }
audiopus_sys = { version = "0.1", optional = true, features = ["static"] }
ogg = { version = "0.5", optional = true }
flacenc = { version = "0.5", optional = true }

# ZIP for NPZ parsing — pure-Rust deflate (the only compression numpy .npz uses)
# on mobile; full feature set kept on desktop for completeness.
# NOTE: Desktop and mobile use separate target sections so features aren't merged.

# ── ONNX Runtime — platform-specific linking strategy ────────────────────────
#
# ort-sys build script resolution order:
#   1. ORT_LIB_LOCATION env var       — explicit user-provided path
#   2. pkg-config                     — finds system libonnxruntime
#                                       (e.g. Alpine: apk add onnxruntime-dev)
#   3. download-binaries              — fetches the pre-built ORT library for
#                                       the current target from cdn.pyke.io
#
# Platform notes:
#   Desktop (Linux/macOS/Windows)
#     pkg-config first (zero-download on Alpine/Debian/Homebrew installs), then
#     falls back to download-binaries.  copy-dylibs places the .so/.dylib next
#     to the binary so the dynamic linker finds it without RPATH changes.
#
#   iOS
#     ORT ships as a static XCFramework; ort-sys handles it via the
#     ORT_IOS_XCFWK_LOCATION env var or download-binaries.  copy-dylibs is
#     omitted — there is no .dylib to copy for static iOS builds.
#
#   Android
#     download-binaries fetches libonnxruntime.so for the NDK target.
#     copy-dylibs places the .so next to the binary (useful for native-activity
#     and for cargo-ndk test runs; AAR packaging requires manual placement in
#     jniLibs/ afterwards).

[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
# HuggingFace Hub for model download — desktop only.
# hf-hub's default "native-tls" feature pulls in openssl-sys which cannot be
# cross-compiled for iOS/Android without a full SDK.  Mobile apps bundle models.
#
# We disable the default native-tls feature and use the ureq backend instead
# (ureq v3 uses rustls by default — no OpenSSL needed, cross-compilation friendly).
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }

# Async runtime and HTTP server (optional, behind `server` feature)
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "macros", "net", "signal"] }
tokio-stream = { version = "0.1", optional = true }
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", optional = true, features = ["trace", "cors"] }
clap = { version = "4", optional = true, features = ["derive"] }
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
    "std",
    "pkg-config",        # try system libonnxruntime first (graceful no-op if absent)
    "download-binaries", # fallback: fetch pre-built static libonnxruntime.a from Pyke CDN
    "tls-rustls",        # pure-Rust TLS — cross-compilation friendly (no OpenSSL required)
    # copy-dylibs intentionally omitted: the Pyke CDN tarball ships libonnxruntime.a
    # (linked statically via cargo:rustc-link-lib=static=onnxruntime) alongside optional
    # provider dylibs.  copy-dylibs would copy those provider dylibs next to the binary,
    # which isn't needed for CPU inference and breaks Tauri .app bundles because the dylibs
    # are not included in Contents/MacOS/ or Contents/Frameworks/.
] }
# Deflate-only on all platforms — NPZ files only use deflate (or store).
# Avoids lzma-sys which conflicts with liblzma-sys (tracel-llvm-bundler).
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
    "std",
    # download-binaries: ort-sys downloads libonnxruntime.a from cdn.pyke.io at
    # build time (aarch64-apple-ios.tar.lzma2 or …-sim.tar.lzma2).  ring (pulled
    # in by tls-rustls) compiles fine on a macOS host that has Xcode installed.
    # iOS builds must be done from macOS — cargo check from Linux will fail here.
    "download-binaries",
    "tls-rustls",
    # copy-dylibs intentionally omitted — ORT is a static lib on iOS
] }
# Deflate-only zip: avoids bzip2-sys, lzma-sys, zstd-sys which need C cross-toolchain.
# numpy .npz files only use deflate (or store), so this is functionally complete.
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "android")'.dependencies]
ort = { version = "=2.0.0-rc.11", default-features = false, features = [
    "std",
    "download-binaries", # fetches libonnxruntime.so for the Android NDK target
    "tls-rustls",        # pure-Rust TLS — avoids openssl-sys cross-compilation
    "copy-dylibs",       # copies .so next to binary; move to jniLibs/ for APK packaging
] }
# Deflate-only zip: avoids bzip2-sys, lzma-sys, zstd-sys which need C cross-toolchain.
zip = { version = "2", default-features = false, features = ["deflate"] }


[[example]]
name = "basic"
path = "examples/basic.rs"
required-features = ["espeak"]

# ── OpenAI-compatible TTS server ────────────────────────────────────────────────
[[bin]]
name = "kittentts-server"
path = "src/bin/server.rs"
required-features = ["server"]
